--- a/wiki/Index.wiki
+++ b/wiki/Index.wiki
@@ -11,9 +11,14 @@ As you can see it takes really little to make this work! and with so many advant
 
 = Installation =
 
-* setup aMulecmd, it is very simple. You can check a guide here:
-   http://www.seo-blackhat.com/article/install-amule-daemon-amuled.html
-* run the python server named aMuleSocket.py, check if IP and port are correct
-* open iMule project in xcode and look in the delegate file, all you need to do is replace     name and port with your own!
-* install the project and your much well done!
-* = CONTRIBUTE!! = have an idea? post it!
+setup aMulecmd, it is very simple. You can check a guide here: http://www.seo-blackhat.com/article/install-amule-daemon-amuled.html
+
+# run the python server named aMuleSocket.py, check if IP and port are correct
+
+# open iMule project in xcode and look in the delegate file, all you need to do is replace name and port with your own!
+
+# install the project and your much well done!
+
+# = CONTRIBUTE!! = have an idea? post it!
+
+# = POST BUGS!! =
